--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -209,11 +209,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Set PR to draft
     needs: [Indentation, Markdown, Python, Documentation, cppcheck_static_analysis_errors, cmake_static_analysis, spelling]
-    if: failure() && ${{ inputs.pr_number }} != ""
+    if: failure()
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/set_pr_status
         with:
           status: "failure"
-          pr_number: ${{ inputs.pr_number }}
+          pr_number: ${{ github.event.pull_request.number }}
           sha: ${{ github.sha }}
