--- a/.github/actions/duplicate_check/action.yml
+++ b/.github/actions/duplicate_check/action.yml
@@ -9,7 +9,7 @@ runs:
   steps:
     - run: |
         MATCHING_PATHS='["src/**/*.hpp", "src/**/*.cpp", "tests/**/*.hpp", "tests/**/*.cpp", "simulations/**/*.hpp", "simulations/**/*.cpp", "**/CMakeLists.txt", "vendor/**", ".github/actions/**", ".github/workflows/**", "toolchains/docker.gyselalibxx_env/**", "toolchains/v100.persee/**"]'
-        echo "MATCHING_PATHS=${MATCHING_PATHS}" >> ${GITHUB_OUTPUT}
+        echo "MATCHING_PATHS=${MATCHING_PATHS}" >> ${GITHUB_ENV}
       shell: bash
     - id: pr_check
       if: github.event_name == 'pull_request'
@@ -29,7 +29,7 @@ runs:
         import os
         with open("changed_files.txt") as f:
           lines = f.readlines()
-        matches = [m for pat in ${{ github.outputs.MATCHING_PATHS }} for m in fnmatch.filter(lines, pat)]
+        matches = [m for pat in os.environ['MATCHING_PATHS'] for m in fnmatch.filter(lines, pat)]
         with open(os.environ['GITHUB_OUTPUT'], 'a') as f:
           f.write(f'found_match={len(matches)!=0}')
       shell: python
