--- a/.github/workflows/gpu_tests.yml
+++ b/.github/workflows/gpu_tests.yml
@@ -46,6 +46,8 @@ jobs:
           # Wait 10 seconds in case job is cancelled
           sleep 10
         shell: bash
+        env:
+        GH_TOKEN: ${{ github.token }}
 
   trigger_gpu_tests:
     runs-on: ubuntu-latest
