--- a/.github/workflows/gpu_tests.yml
+++ b/.github/workflows/gpu_tests.yml
@@ -41,8 +41,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Wait
         run: |
-          sleep 5
-          worflow_id=$(gh run list --commit ${{ inputs.SHA || github.sha }} -w "Static Analyses" --json databaseId --jq '.[]["databaseId"]')
+          workflow_id=$(gh run list --commit ${{ inputs.SHA || github.sha }} -w "Static Analyses" --json databaseId --jq '.[]["databaseId"]')
           echo "Run id : ${workflow_id}"
           if [ -n "${workflow_id}" ]
           then
