--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
     if: github.repository == 'gyselax/gyselalibxx' && github.event.pull_request.draft == false
     # Map a step output to a job output
     outputs:
-      is_duplicate: ${{ steps.skip_check.outputs.should_run }}
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
     steps:
       - uses: actions/checkout@v4
       - id: skip_check
@@ -36,7 +36,7 @@ jobs:
       toolchain: ${{ matrix.toolchain }}
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
       pr_number: ${{ github.event.pull_request.number }}
-      is_duplicate: ${{ needs.pre_job.outputs.is_duplicate == 'false' && github.event.pull_request.draft == false }}
+      is_duplicate: ${{ needs.pre_job.outputs.should_skip == 'true' && github.event.pull_request.draft == false }}
 
   gpu_tests:
     name: GPU Test
@@ -47,5 +47,5 @@ jobs:
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
       SHA: ${{ github.event.pull_request.head.sha }}
       pr_number: ${{ github.event.pull_request.number }}
-      is_duplicate: ${{ needs.pre_job.outputs.is_duplicate == 'true' && github.event.pull_request.draft == false }}
+      is_duplicate: ${{ needs.pre_job.outputs.should_skip == 'true' && github.event.pull_request.draft == false }}
     secrets: inherit
