--- a/.github/actions/set_pr_status/action.yml
+++ b/.github/actions/set_pr_status/action.yml
@@ -17,12 +17,12 @@ runs:
     - uses: actions/checkout@v4
     - if: github.repository == 'gyselax/gyselalibxx' && inputs.status == 'success'
       run: |
-        STATES=$(gh pr checks ${pr_number} --required --json state)
+        STATES=$(gh pr checks ${{ inputs.pr_number }} --required --json state)
         N_PASSES=$(echo $STATES | grep -o "\"state\":\"SUCCESS\"" | wc -l)
         if [[ ${N_PASSES} >= 10 ]]
         then
           # If all required tests (except GPU) are passing then mark as ready to review
-          gh pr edit ${pr_number} --add-label "Ready to review"
+          gh pr edit ${{ inputs.pr_number }} --add-label "Ready to review"
         fi
       shell: bash
       env:
