--- a/.github/workflows/review_react.yml
+++ b/.github/workflows/review_react.yml
@@ -12,6 +12,7 @@ jobs:
     if: ((! github.event.pull_request.draft) && (github.event.review.user.type != 'Bot' ) && (! github.event.pull_request.head.repo.fork))
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Set draft
         if: github.event.review.state == 'changes_requested'
         run: |
