--- a/.github/workflows/flag_checks.yml
+++ b/.github/workflows/flag_checks.yml
@@ -9,14 +9,15 @@ jobs:
   Check_flags:
     name: Check flags
     runs-on: ubuntu-latest
-    if: github.action.label.name == 'Ready to review' && github.action.pull_request.draft
+    if: github.event.label.name == 'Ready to review' && github.event.pull_request.draft
     steps:
       - uses: actions/checkout@v4
         with:
           ref: main
       - run: |
           gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
-          gh pr comment ${{ github.event.pull_request.number }} -b "Please remove the draft status if the PR is ready to review"
+          msg="Please remove the draft status if the PR is ready to review. The 'Ready to review' label will be added automatically when the tests are shown to be passing"
+          gh pr comment ${{ github.event.pull_request.number }} -b "${msg}"
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
