--- a/.github/actions/duplicate_check/action.yml
+++ b/.github/actions/duplicate_check/action.yml
@@ -34,7 +34,7 @@ runs:
         matches = [m for pat in matching_paths for m in fnmatch.filter(lines, pat)]
         print(matches)
         with open(os.environ['GITHUB_OUTPUT'], 'a') as f:
-          f.write(f'found_match={len(matches)!=0}')
+          f.write(f'found_match={str(len(matches)!=0).lower()}')
       shell: python
     - id: duplicate_check
       uses: fkirc/skip-duplicate-actions@v5
