--- a/.github/actions/duplicate_check/action.yml
+++ b/.github/actions/duplicate_check/action.yml
@@ -34,7 +34,7 @@ runs:
         matches = [m for pat in matching_paths for m in fnmatch.filter(lines, pat)]
         print(matches)
         with open(os.environ['GITHUB_OUTPUT'], 'a') as f:
-          f.write(f'found_match={str(len(matches)!=0).lower()}')
+          f.write(f'found_match={len(matches)!=0}')
       shell: python
     - id: duplicate_check
       uses: fkirc/skip-duplicate-actions@v5
@@ -45,7 +45,7 @@ runs:
       run: |
         echo "Found match : ${{ steps.changes_check.outputs.found_match }}"
         echo "Should skip : ${{ steps.duplicate_check.outputs.should_skip }}"
-        SHOULD_SKIP=${{ (! steps.changes_check.outputs.found_match) || steps.duplicate_check.outputs.should_skip }}
+        SHOULD_SKIP=${{ (steps.changes_check.outputs.found_match == 'False') || (steps.duplicate_check.outputs.should_skip == 'true') }}
         echo "should_skip=${SHOULD_SKIP}" >> $GITHUB_OUTPUT
         echo "should_skip=${SHOULD_SKIP}"
       shell: bash
