--- a/tests/multipatch/connectivity/CMakeLists.txt
+++ b/tests/multipatch/connectivity/CMakeLists.txt
@@ -2,8 +2,11 @@
 
 add_executable("unit_tests_connectivity"
         coord_transformation.cpp
+        coord_transformation_periodic.cpp
         index_transformation_uniform.cpp
         index_transformation_non_uniform.cpp
+        index_transformation_uniform_periodic.cpp
+        #index_transformation_non_uniform_periodic.cpp
         matching_idx_slice_uniform_grids.cpp
         matching_idx_slice_non_uniform_grids.cpp
         multipatch_connectivity.cpp
