--- a/.github/actions/set_pr_status/action.yml
+++ b/.github/actions/set_pr_status/action.yml
@@ -34,9 +34,13 @@ runs:
         LATEST_SHA=$(gh pr view ${{ inputs.pr_number }} --json headRefOid --jq '.["headRefOid"]')
         if [[ "${LATEST_SHA}" == "${{ inputs.sha }}" ]]
         then
-          # If the PR hasn't been modified since then put it into draft
-          gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
-          gh pr ready ${{ github.event.pull_request.number }} --undo
+          is_draft=$(gh pr view ${{ inputs.pr_number }} --json isDraft --jq '.["isDraft"]')
+          if [[ "${is_draft}" == "false" ]]
+          then
+            # If the PR hasn't been modified since then put it into draft
+            gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
+            gh pr ready ${{ github.event.pull_request.number }} --undo
+          fi
         else
           # If the PR has been modified then cancel any runs associated with this SHA
           RUNNING_WORKFLOWS=$(gh run list --commit ${{ inputs.sha }} --json databaseId,status --jq '.[] | select(.status == "completed") | .["databaseId"]')
