Use gslx::advection not gslx::advection_RTheta

--- a/simulations/geometryRTheta/diocotron/CMakeLists.txt
+++ b/simulations/geometryRTheta/diocotron/CMakeLists.txt
@@ -27,7 +27,7 @@ function (diocotron_executable PREDCORR_METHOD TIME_METHOD )
 
             Eigen3::Eigen
 
-            gslx::advection_RTheta
+            gslx::advection
             gslx::diocotron_init_eq
             gslx::geometry_RTheta
             gslx::interpolation
