--- a/simulations/geometryRTheta/vortex_merger/CMakeLists.txt
+++ b/simulations/geometryRTheta/vortex_merger/CMakeLists.txt
@@ -14,7 +14,7 @@ target_link_libraries(vortex_merger
 
         Eigen3::Eigen
 
-        gslx::advection_RTheta
+        gslx::advection
         gslx::geometry_RTheta
         gslx::io
         gslx::interpolation
