--- a/tests/geometryRTheta/advection_rtheta/CMakeLists.txt
+++ b/tests/geometryRTheta/advection_rtheta/CMakeLists.txt
@@ -79,7 +79,7 @@ target_link_libraries(advection_ALL
 		Eigen3::Eigen
 
 
-		gslx::advection_RTheta
+		gslx::advection
 		gslx::geometry_RTheta
 		gslx::interpolation
 		gslx::io
