--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -72,7 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     name: CPU PR result
     needs: [cpu_tests]
-    if: always() && ${{ inputs.pr_number }} != ""
+    if: always() && (${{ inputs.pr_number }} != "")
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/set_pr_status
