Fix regex for library name (#232)
This PR follows on from #226. The regex used in #226 to detect
"Gyselalib" was incorrect. This PR fixes the regex and corrects 3
"Gyselalib"s that should be "Gyselalib++".

It also includes a minor bug fix for the CI (wrong variable to get SHA
in set_pr_status, and incorrectly leaving a message putting the PR in
draft when it is already in draft).

--- a/.github/actions/set_pr_status/action.yml
+++ b/.github/actions/set_pr_status/action.yml
@@ -32,14 +32,18 @@ runs:
       # If any required tests are failing
       run: |
         LATEST_SHA=$(gh pr view ${{ inputs.pr_number }} --json headRefOid --jq '.["headRefOid"]')
-        if [[ "${LATEST_SHA}" == "${SHA}" ]]
+        if [[ "${LATEST_SHA}" == "${{ inputs.sha }}" ]]
         then
-          # If the PR hasn't been modified since then put it into draft
-          gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
-          gh pr ready ${{ github.event.pull_request.number }} --undo
+          is_draft=$(gh pr view ${{ inputs.pr_number }} --json isDraft --jq '.["isDraft"]')
+          if [[ "${is_draft}" == "false" ]]
+          then
+            # If the PR hasn't been modified since then put it into draft
+            gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
+            gh pr ready ${{ github.event.pull_request.number }} --undo
+          fi
         else
           # If the PR has been modified then cancel any runs associated with this SHA
-          RUNNING_WORKFLOWS=$(gh run list --commit ${SHA} --json databaseId,status --jq '.[] | select(.status == "completed") | .["databaseId"]')
+          RUNNING_WORKFLOWS=$(gh run list --commit ${{ inputs.sha }} --json databaseId,status --jq '.[] | select(.status == "completed") | .["databaseId"]')
           for workflow_id in ${RUNNING_WORKFLOWS}
           do
             gh run cancel ${workflow_id}
