Add test non_uniform idx transfo + all tests passing.

--- a/tests/multipatch/connectivity/CMakeLists.txt
+++ b/tests/multipatch/connectivity/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable("unit_tests_connectivity"
         index_transformation_uniform.cpp
         index_transformation_non_uniform.cpp
         index_transformation_uniform_periodic.cpp
-        #index_transformation_non_uniform_periodic.cpp
+        index_transformation_non_uniform_periodic.cpp
         matching_idx_slice_uniform_grids.cpp
         matching_idx_slice_non_uniform_grids.cpp
         multipatch_connectivity.cpp
