--- a/tests/math_tools/CMakeLists.txt
+++ b/tests/math_tools/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(unit_tests_math_tools
     test_lnorm_tools.cpp
     test_math_tools.cpp
     test_partial_derivatives.cpp
+    test_poisson_bracket.cpp
     test_spline_2d_cache.cpp
     ../main.cpp
 )
