Fix bugs in the mappings (#242)
Add a `mapping_static_properties.cpp` test for mappings to ensure that
they correctly implement the expected properties. This shows that the
jacobian methods for `CartesianToCircular` were incorrectly implemented
in #213. The indices are fixed. Additionally the missing property is
added to `BarycentricToCartesian` to show that it is an analytically
invertible mapping.


To merge after #241

--- a/tests/mapping/CMakeLists.txt
+++ b/tests/mapping/CMakeLists.txt
@@ -1,88 +1,21 @@
 include(GoogleTest)
 
-add_executable(metric_tensor_tests_sll
-    ../main.cpp
-    metric_tensor_evaluator.cpp
-)
-target_compile_features(metric_tensor_tests_sll PUBLIC cxx_std_17)
-target_link_libraries(metric_tensor_tests_sll
-    PUBLIC
-        GTest::gtest
-        GTest::gmock
-        gslx::mapping
-        gslx::utils
-)
-gtest_discover_tests(metric_tensor_tests_sll DISCOVERY_MODE PRE_TEST)
-
-add_executable(jacobian_mapping_tests_sll
-    ../main.cpp
-    mapping_jacobian.cpp
-)
-target_compile_features(jacobian_mapping_tests_sll PUBLIC cxx_std_17)
-target_link_libraries(jacobian_mapping_tests_sll
-    PUBLIC
-        GTest::gtest
-        GTest::gmock
-        gslx::mapping
-        gslx::math_tools
-        gslx::utils
-)
-gtest_discover_tests(jacobian_mapping_tests_sll DISCOVERY_MODE PRE_TEST)
-
-add_executable(jacobian_mapping_matrix_coef_tests_sll
-    ../main.cpp
-    mapping_jacobian_matrix_coef.cpp
-)
-target_compile_features(jacobian_mapping_matrix_coef_tests_sll PUBLIC cxx_std_17)
-target_link_libraries(jacobian_mapping_matrix_coef_tests_sll
-    PUBLIC
-        GTest::gtest
-        GTest::gmock
-        gslx::mapping
-        gslx::utils
-)
-gtest_discover_tests(jacobian_mapping_matrix_coef_tests_sll DISCOVERY_MODE PRE_TEST)
-
-add_executable(pseudo_cartesian_tests_sll
-    ../main.cpp
-    pseudo_cartesian_jacobian_matrix.cpp
-)
-target_compile_features(pseudo_cartesian_tests_sll PUBLIC cxx_std_17)
-target_link_libraries(pseudo_cartesian_tests_sll
-    PUBLIC
-        GTest::gtest
-        GTest::gmock
-        gslx::mapping
-        gslx::utils
-)
-gtest_discover_tests(pseudo_cartesian_tests_sll DISCOVERY_MODE PRE_TEST)
-
-add_executable(refined_discrete_mapping_test
-    ../main.cpp
-    refined_discrete_mapping.cpp
-)
-target_compile_features(refined_discrete_mapping_test PUBLIC cxx_std_17)
-target_link_libraries(refined_discrete_mapping_test
-    PUBLIC
-        GTest::gtest
-        GTest::gmock
-        gslx::mapping
-        gslx::utils
-)
-gtest_discover_tests(refined_discrete_mapping_test DISCOVERY_MODE PRE_TEST)
-
-add_executable(mapping_execution_space_access
+add_executable(unit_tests_mapping
     ../main.cpp
     mapping_execution_space_access.cpp
+    mapping_jacobian.cpp
+    mapping_jacobian_matrix_coef.cpp
+    mapping_static_properties.cpp
+    metric_tensor_evaluator.cpp
+    pseudo_cartesian_jacobian_matrix.cpp
+    refined_discrete_mapping.cpp
 )
-target_compile_features(mapping_execution_space_access PUBLIC cxx_std_17)
-target_link_libraries(mapping_execution_space_access
+target_compile_features(unit_tests_mapping PUBLIC cxx_std_17)
+target_link_libraries(unit_tests_mapping
     PUBLIC
         GTest::gtest
         GTest::gmock
         gslx::mapping
         gslx::utils
 )
-gtest_discover_tests(mapping_execution_space_access DISCOVERY_MODE PRE_TEST)
-
-
+gtest_discover_tests(unit_tests_mapping DISCOVERY_MODE PRE_TEST)
