--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -82,20 +82,11 @@ jobs:
       - name: Check Test Coverage
         run: |
           pip install gcovr
-          gcovr --filter src --json cov.json --merge-mode-functions=merge-use-line-0 build
-      - name: Coverage annotations
-        uses: jgillick/test-coverage-annotations@v1.0.3
-        with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          coverage: ./cov.json
-          only-changed-files: true
-      #- name: Annotate coverage
-      #  uses: ZainAmjad68/test-coverage-annotate@v1.2
-      #  with:
-      #    token: ${{ secrets.GITHUB_TOKEN }}
-      #    coverage-info-path: './build/lcov.info'
-      #    annotation-coverage: 'detailed'
-      #    annotation-type: 'lines'
+          gcovr --filter src --cobertura coverage.xml --merge-mode-functions=merge-use-line-0 build
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v5
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   #set_draft_failing:
   #  runs-on: ubuntu-latest
