--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,11 +79,11 @@ jobs:
       #    name: code-coverage-report
       - name: Copy test
         run: |
-          cp cov_test/coverage.json .
+          cp cov_test/coverage.lcov .
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v5
         with:
-          files: coverage.json
+          files: coverage.lcov
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
 
