--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,6 +73,8 @@ jobs:
     #needs: coverage_test
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout gyselalibxx
+        uses: actions/checkout@v4
       #- name: Download a single artifact
       #  uses: actions/download-artifact@v4
       #  with:
