--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -81,11 +81,11 @@ jobs:
       #    name: code-coverage-report
       - name: Copy test
         run: |
-          cp cov_test/coverage.lcov .
+          cp cov_test/coverage.json .
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v5
         with:
-          files: coverage.lcov
+          files: coverage.json
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
 
