--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -77,7 +77,7 @@ jobs:
         if: ${{ needs.pre_job.outputs.should_skip == 'false' }}
         uses: ./.github/actions/test_filter
         with:
-          base_sha: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha | inputs.merge_target }}
+          base_sha: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha || inputs.merge_target }}
           trigger_type: ${{ github.event_name }}
       - name: Build code
         if: ${{ needs.pre_job.outputs.should_skip == 'false' }}
