--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -92,7 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     name: CPU PR result
     needs: [cpu_tests]
-    if: always() && (github.event_name == 'pull_request' && github.event.pull_request.draft == true)
+    if: always() && (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/set_pr_status
