--- a/.github/actions/set_pr_status/action.yml
+++ b/.github/actions/set_pr_status/action.yml
@@ -40,15 +40,15 @@ runs:
             # If the PR hasn't been modified since then put it into draft
             gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
             gh pr ready ${{ github.event.pull_request.number }} --undo
+            gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
           fi
-        else
-          # If the PR has been modified then cancel any runs associated with this SHA
-          RUNNING_WORKFLOWS=$(gh run list --commit ${{ inputs.sha }} --json databaseId,status --jq '.[] | select(.status == "completed") | .["databaseId"]')
-          for workflow_id in ${RUNNING_WORKFLOWS}
-          do
-            gh run cancel ${workflow_id}
-          done
         fi
+        # If the PR has been modified then cancel any runs associated with this SHA
+        RUNNING_WORKFLOWS=$(gh run list --commit ${{ inputs.sha }} --json databaseId,status --jq '.[] | select(.status == "completed") | .["databaseId"]')
+        for workflow_id in ${RUNNING_WORKFLOWS}
+        do
+          gh run cancel ${workflow_id}
+        done
       shell: bash
       env:
         GH_TOKEN: ${{ github.token }}
