--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -1,6 +1,15 @@
 name: CPU acceptance tests
 
 on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+  merge_group:
+    types:
+      - checks_requested
   workflow_dispatch:
     inputs:
       toolchain:
@@ -16,67 +25,78 @@ on:
         required: false
         default: main
         type: string
-  workflow_call:
-    inputs:
-      toolchain:
-        description: "Tool chain to use for test"
-        required: true
-        type: string
-      merge_target:
-        description: "The branch to which this branch should be compared to filter out costly tests"
-        required: true
-        type: string
-      pr_number:
-        description: "The number of the pull request that triggered the test"
-        required: false
-        type: number
-      is_duplicate:
-        description: "Indicate if the run would be a duplicate"
-        required: false
-        default: false
-        type: boolean
 
 concurrency:
-  group: ${{ github.event_name != 'workflow_dispatch' && format('{0}-{1}-{2}', github.workflow, inputs.pr_number, inputs.toolchain) || github.run_id }}
+  group: ${{ github.event_name == 'pull_request' && format('{0}-{1}', github.workflow, github.event.pull_request.number) || github.run_id }}
   cancel-in-progress: true
 
 jobs:
+  pre_job:
+    name: 'Check for unnecessary runs'
+    runs-on: ubuntu-latest
+    if: github.repository == 'gyselax/gyselalibxx' && (github.event_name != 'pull_request' || github.event.pull_request.draft == false)
+    # Map a step output to a job output
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v4
+      - id: skip_check
+        uses: ./.github/actions/duplicate_check
+      - if: github.event_name != 'workflow_dispatch'
+        run: |
+          echo "matrix=['tests_toolchain', 'tests_release_toolchain', 'tests_release_omp_toolchain']" >> $GITHUB_ENV
+        shell: bash
+      - if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "matrix=['${{ inputs.toolchain }}']" >> $GITHUB_ENV
+        shell: bash
+      - id: set-matrix
+        run: |
+          echo "${matrix}"
+          echo "matrix={\"toolchain\": $matrix}" >> $GITHUB_OUTPUT
+        shell: bash
+
   cpu_tests:
     runs-on: ubuntu-latest
+    needs: pre_job
+    strategy:
+      matrix: ${{fromJson(needs.pre_job.outputs.matrix)}}
+      fail-fast: false
     container:
       image: ghcr.io/gyselax/gyselalibxx_env:latest
       options: --user root
-    name: CPU Test (${{ inputs.toolchain }})
+    name: CPU Test (${{ matrix.toolchain }})
     steps:
       - name: Checkout gyselalibxx
-        if: ${{ ! inputs.is_duplicate }}
+        if: ${{ needs.pre_job.outputs.should_skip == 'false' }}
         uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: "Filter tests"
-        if: ${{ ! inputs.is_duplicate }}
+        if: ${{ needs.pre_job.outputs.should_skip == 'false' }}
         uses: ./.github/actions/test_filter
         with:
-          base_sha: ${{ inputs.merge_target }}
+          base_sha: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha || inputs.merge_target }}
           trigger_type: ${{ github.event_name }}
       - name: Build code
-        if: ${{ ! inputs.is_duplicate }}
+        if: ${{ needs.pre_job.outputs.should_skip == 'false' }}
         uses: ./.github/actions/build_code
         with:
-          toolchain: toolchains/docker.gyselalibxx_env/${{ inputs.toolchain }}.cmake
+          toolchain: toolchains/docker.gyselalibxx_env/${{ matrix.toolchain }}.cmake
       - name: Run tests
-        if: ${{ ! inputs.is_duplicate }}
+        if: ${{ needs.pre_job.outputs.should_skip == 'false' }}
         uses: ./.github/actions/run_tests
 
   set_pr_status:
     runs-on: ubuntu-latest
     name: CPU PR result
     needs: [cpu_tests]
-    if: always() && (${{ inputs.pr_number }} != "")
+    if: always() && (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/set_pr_status
         with:
           status: ${{ needs.cpu_tests.result }}
-          pr_number: ${{ inputs.pr_number }}
+          pr_number: ${{ github.event.pull_request.number }}
           sha: ${{ github.sha }}
